--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,14 @@
 .App {
   text-align: center;
+  background: linear-gradient(180deg, rgba(223,223,223,1) 3%, rgba(0,0,0,1) 93%, rgba(0,0,0,1) 100%);
+  height: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.GetToken {
+  margin: 30% 50%;
+  font-size: 30;
+  background: '#84bd00';
+  border-radius: 25px;
+  height: 50px;
+  width: 120px;
 }
